# rag-starter

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  OPENROUTER_EMBEDDING_MODELS.md  PLAN.md  README.md  TODOS.md  kb_rag.py  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: pages.yml  rust-release.yml  swift-gemma4.yml
Gemma4DeviceSample/Gemma4DeviceSample/: Gemma4ConsoleView.swift  Gemma4ConsoleViewModel.swift  Gemma4SettingsView.swift
Gemma4DeviceSample/Gemma4DeviceSample.xcodeproj/: project.pbxproj
Gemma4DeviceSample/Gemma4DeviceSampleTests/: Gemma4DeviceSampleTests.swift
Gemma4DeviceSample/Gemma4DeviceSampleUITests/: Gemma4DeviceSampleUITests.swift  Gemma4DeviceSampleUITestsLaunchTests.swift
demo_docs/: README.md  customer_support_sla.txt  employee_onboarding.md  manifest.json  security_policy.md  travel_reimbursement.md
docs/: AGENT_SKILLS.md  MODEL_SITE_TRACK.md  PILOT_PLAN.md  PYTHON_DEMO_TRACK.md  RAG_RADAR_RUNBOOK.md  RAG_RADAR_SNAPSHOT_TEMPLATE.md  RESEARCH_DIR.md  RUST_LEARNING_TRACK.md  SECURITY_AND_TOKENS.md  SHIP_PUBLISH_AND_TEACH.md  SYNC_SPLIT_REPOS.md  UAT_CHECKLIST.md
embed_proxy/: README.md  openrouter_embed_proxy.py
rag_model_site/: DESIGN_SYSTEM.md  MOBILE_QA_REPORT.md  OPENROUTER_EMBEDDING_MODELS.md  README.md  SITE_STRUCTURE.md  VERIFICATION.md  app.js  embed-playground.html  index.html  kb-hybrid-demo.html  styles.css
rag_model_site/assets/: design-tokens.css  design-tokens.json  theme-toggle.js
rag_model_site/data/: agent_framework_guide.json  kb_hybrid_demo.json  models.json  public_examples.json
rag_model_site/guides/: index.html
rag_model_site/js/: bm25_index.js  hybrid_rrf.js  hybrid_search.js  kb_hybrid_demo_page.js
scripts/: build_kb_hybrid_demo.mjs  collect_openrouter_models.py  link-agent-skills.sh
skills/rag-starter/: SKILL.md
src/: agent_tools.rs  chat.rs  debug_ndjson.rs  main.rs  mcp_tool.rs  rag.rs  schemas.rs  session.rs
swift-gemma4-sample/: .gitignore  DESIGN.md  MAINTAINABILITY_PLAN.md  Package.swift  README.md  design-tokens.json  run-local.sh
swift-gemma4-sample/docs/: MAINTAINING.md  SWIFT_MLX_BEST_PRACTICES.md  UAT_PLAN.md
swift-gemma4-sample/ios-app/: DEVICE_CHECKLIST.md  README.md
tests/: test_kb_rag.py
tests/kb_hybrid_browser/: bm25.test.mjs  rrf.test.mjs
(+20 files in other folders)
