[package]
name = "rag-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { version = "0.35", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
