[package]
name = "rag-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { version = "0.35", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

# MCP client + stdio child transport (filesystem / search servers)
rmcp = { version = "1.5", default-features = false, features = [
    "client",
    "transport-child-process",
] }

# Optional TUI (--tui)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
