[project]
name = "rag-starter"
version = "0.1.0"
description = "Rust and Python RAG starter with a Streamlit internal KB demo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic",
  "llama-index-core>=0.11.0",
  "llama-index-embeddings-openai>=0.3.0",
  "llama-index-retrievers-bm25>=0.3.0",
  "numpy",
  "openai",
  "python-dotenv",
  "streamlit",
]

[dependency-groups]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
